Challenges/Challenge1/Summer2021Coding-copy/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/private/var/folders/l9/x506mvbx5h3cx30jks1mmb440000gn/T/AppTranslocation/D99A0C3C-975D-4F99-BC56-463710C4E8AF/d/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
/private/var/folders/l9/x506mvbx5h3cx30jks1mmb440000gn/T/AppTranslocation/D99A0C3C-975D-4F99-BC56-463710C4E8AF/d/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/private/var/folders/l9/x506mvbx5h3cx30jks1mmb440000gn/T/AppTranslocation/D99A0C3C-975D-4F99-BC56-463710C4E8AF/d/BlueJ.app/Contents/Resources/Java/junit-platform-console-standalone-1.5.2.jar:/private/var/folders/l9/x506mvbx5h3cx30jks1mmb440000gn/T/AppTranslocation/D99A0C3C-975D-4F99-BC56-463710C4E8AF/d/BlueJ.app/Contents/Resources/Java/junit-quickcheck-core-0.9.jar:/private/var/folders/l9/x506mvbx5h3cx30jks1mmb440000gn/T/AppTranslocation/D99A0C3C-975D-4F99-BC56-463710C4E8AF/d/BlueJ.app/Contents/Resources/Java/junit-jupiter-migrationsupport-5.5.2.jar:/private/var/folders/l9/x506mvbx5h3cx30jks1mmb440000gn/T/AppTranslocation/D99A0C3C-975D-4F99-BC56-463710C4E8AF/d/BlueJ.app/Contents/Resources/Java/junit-platform-runner-1.5.2.jar:/private/var/folders/l9/x506mvbx5h3cx30jks1mmb440000gn/T/AppTranslocation/D99A0C3C-975D-4F99-BC56-463710C4E8AF/d/BlueJ.app/Contents/Resources/Java/junit-jupiter-params-5.5.2.jar:/private/var/folders/l9/x506mvbx5h3cx30jks1mmb440000gn/T/AppTranslocation/D99A0C3C-975D-4F99-BC56-463710C4E8AF/d/BlueJ.app/Contents/Resources/Java/junit-platform-testkit-1.5.2.jar:/private/var/folders/l9/x506mvbx5h3cx30jks1mmb440000gn/T/AppTranslocation/D99A0C3C-975D-4F99-BC56-463710C4E8AF/d/BlueJ.app/Contents/Resources/Java/junit-jupiter-api-5.5.2.jar:/private/var/folders/l9/x506mvbx5h3cx30jks1mmb440000gn/T/AppTranslocation/D99A0C3C-975D-4F99-BC56-463710C4E8AF/d/BlueJ.app/Contents/Resources/Java/junit-platform-console-1.5.2.jar:/private/var/folders/l9/x506mvbx5h3cx30jks1mmb440000gn/T/AppTranslocation/D99A0C3C-975D-4F99-BC56-463710C4E8AF/d/BlueJ.app/Contents/Resources/Java/junit-jupiter-engine-5.5.2.jar:/private/var/folders/l9/x506mvbx5h3cx30jks1mmb440000gn/T/AppTranslocation/D99A0C3C-975D-4F99-BC56-463710C4E8AF/d/BlueJ.app/Contents/Resources/Java/junit-platform-suite-api-1.5.2.jar:/private/var/folders/l9/x506mvbx5h3cx30jks1mmb440000gn/T/AppTranslocation/D99A0C3C-975D-4F99-BC56-463710C4E8AF/d/BlueJ.app/Contents/Resources/Java/junit-vintage-engine-5.5.2.jar:/private/var/folders/l9/x506mvbx5h3cx30jks1mmb440000gn/T/AppTranslocation/D99A0C3C-975D-4F99-BC56-463710C4E8AF/d/BlueJ.app/Contents/Resources/Java/junit-platform-reporting-1.5.2.jar:/private/var/folders/l9/x506mvbx5h3cx30jks1mmb440000gn/T/AppTranslocation/D99A0C3C-975D-4F99-BC56-463710C4E8AF/d/BlueJ.app/Contents/Resources/Java/junit-jupiter-5.5.2.jar:/private/var/folders/l9/x506mvbx5h3cx30jks1mmb440000gn/T/AppTranslocation/D99A0C3C-975D-4F99-BC56-463710C4E8AF/d/BlueJ.app/Contents/Resources/Java/junit-platform-engine-1.5.2.jar:/private/var/folders/l9/x506mvbx5h3cx30jks1mmb440000gn/T/AppTranslocation/D99A0C3C-975D-4F99-BC56-463710C4E8AF/d/BlueJ.app/Contents/Resources/Java/junit-platform-launcher-1.5.2.jar:/private/var/folders/l9/x506mvbx5h3cx30jks1mmb440000gn/T/AppTranslocation/D99A0C3C-975D-4F99-BC56-463710C4E8AF/d/BlueJ.app/Contents/Resources/Java/junit-platform-commons-1.5.2.jar:/private/var/folders/l9/x506mvbx5h3cx30jks1mmb440000gn/T/AppTranslocation/D99A0C3C-975D-4F99-BC56-463710C4E8AF/d/BlueJ.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/private/var/folders/l9/x506mvbx5h3cx30jks1mmb440000gn/T/AppTranslocation/D99A0C3C-975D-4F99-BC56-463710C4E8AF/d/BlueJ.app/Contents/Resources/Java/hamcrest-library-1.3.jar:/private/var/folders/l9/x506mvbx5h3cx30jks1mmb440000gn/T/AppTranslocation/D99A0C3C-975D-4F99-BC56-463710C4E8AF/d/BlueJ.app/Contents/Resources/Java/lang-stride.jar:/private/var/folders/l9/x506mvbx5h3cx30jks1mmb440000gn/T/AppTranslocation/D99A0C3C-975D-4F99-BC56-463710C4E8AF/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.base.jar:/private/var/folders/l9/x506mvbx5h3cx30jks1mmb440000gn/T/AppTranslocation/D99A0C3C-975D-4F99-BC56-463710C4E8AF/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.controls.jar:/private/var/folders/l9/x506mvbx5h3cx30jks1mmb440000gn/T/AppTranslocation/D99A0C3C-975D-4F99-BC56-463710C4E8AF/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.fxml.jar:/private/var/folders/l9/x506mvbx5h3cx30jks1mmb440000gn/T/AppTranslocation/D99A0C3C-975D-4F99-BC56-463710C4E8AF/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.graphics.jar:/private/var/folders/l9/x506mvbx5h3cx30jks1mmb440000gn/T/AppTranslocation/D99A0C3C-975D-4F99-BC56-463710C4E8AF/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.media.jar:/private/var/folders/l9/x506mvbx5h3cx30jks1mmb440000gn/T/AppTranslocation/D99A0C3C-975D-4F99-BC56-463710C4E8AF/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.properties.jar:/private/var/folders/l9/x506mvbx5h3cx30jks1mmb440000gn/T/AppTranslocation/D99A0C3C-975D-4F99-BC56-463710C4E8AF/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.swing.jar:/private/var/folders/l9/x506mvbx5h3cx30jks1mmb440000gn/T/AppTranslocation/D99A0C3C-975D-4F99-BC56-463710C4E8AF/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.web.jar:/Applications/Summer2021CodingClasses/Summer2021/Challenges/Challenge1/Summer2021Coding-copy
-d
/Applications/Summer2021CodingClasses/Summer2021/Challenges/Challenge1/Summer2021Coding-copy/doc
-encoding
UTF-8
-charset
UTF-8
/Applications/Summer2021CodingClasses/Summer2021/Challenges/Challenge1/Summer2021Coding-copy/Challenge1.java
<---- end of javadoc command ---->
Loading source file /Applications/Summer2021CodingClasses/Summer2021/Challenges/Challenge1/Summer2021Coding-copy/Challenge1.java...
/Applications/Summer2021CodingClasses/Summer2021/Challenges/Challenge1/Summer2021Coding-copy/Challenge1.java:35: error: <identifier> expected
@ -2,9 +2,10 @@ package Challenges;
 ^
/Applications/Summer2021CodingClasses/Summer2021/Challenges/Challenge1/Summer2021Coding-copy/Challenge1.java:35: error: class, interface, or enum expected
@ -2,9 +2,10 @@ package Challenges;
  ^
/Applications/Summer2021CodingClasses/Summer2021/Challenges/Challenge1/Summer2021Coding-copy/Challenge1.java:35: error: <identifier> expected
@ -2,9 +2,10 @@ package Challenges;
              ^
/Applications/Summer2021CodingClasses/Summer2021/Challenges/Challenge1/Summer2021Coding-copy/Challenge1.java:35: error: <identifier> expected
@ -2,9 +2,10 @@ package Challenges;
               ^
/Applications/Summer2021CodingClasses/Summer2021/Challenges/Challenge1/Summer2021Coding-copy/Challenge1.java:35: error: class, interface, or enum expected
@ -2,9 +2,10 @@ package Challenges;
                ^
/Applications/Summer2021CodingClasses/Summer2021/Challenges/Challenge1/Summer2021Coding-copy/Challenge1.java:48: error: <identifier> expected
@ @@
 ^
/Applications/Summer2021CodingClasses/Summer2021/Challenges/Challenge1/Summer2021Coding-copy/Challenge1.java:48: error: <identifier> expected
@ @@
   ^
/Applications/Summer2021CodingClasses/Summer2021/Challenges/Challenge1/Summer2021Coding-copy/Challenge1.java:48: error: reached end of file while parsing
@ @@
    ^
/Applications/Summer2021CodingClasses/Summer2021/Challenges/Challenge1/Summer2021Coding-copy/Challenge1.java:52: error: reached end of file while parsing
9 errors
